<resources>
    <string name="app_name">MeetMe</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">104318316613650</string>
    <string name="next">NEXT</string>
    <string name="main_menu">MENU</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Friends</string>
    <string name="login1">"Create new Activities and manage a Schedule in a very easy way!"</string>
    <string name="login3">Filter activities by type for better results</string>
    <string name="login2">Find what your friends are up to, and join their mutual activities</string>
    <string name="noActivity">This user has no activities!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_events_calendar">Calendar</string>
    <string name="title_activity_day_viewer">Schedule</string>
    <string name="title_activity_find_events">Search Events</string>
    <string name="title_activity_new_event">Event Info</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_main_screen_with_drawer">MeetMe</string>
    <string name="title_activity_friends_scrolling">FriendsScrollingActivity</string>

    <string name="text_view_to_date">To Date:</string>
    <string name="edit_text_from_date">From Date</string>
    <string name="edit_text_event_name">Event Name</string>
    <string name="edit_text_event_descryption">Event Descryption</string>
    <string name="edit_text_participation_cap">Participation Cap</string>
    <string name="edit_text_location">Location</string>
    <string name="spinner_recurrence">Recurrence</string>
    <string name="spinner_event_type">Event Type</string>
    <string name="spinner_event_sub_type">Secondary Type</string>
    <string name="button_add_event">Confirm</string>
    <string name="button_search">Search</string>
    <string name="button_clear">Clear All</string>
    <string name="button_modify_event">Update</string>
    <string name="button_join_event">Join</string>
    <string name="button_cancel_event">Cancel</string>
    <string name="button_remove_event">Remove</string>
    <string name="text_view_recurrence">Recurrence</string>
    <string name="text_view_event_type">Event Type</string>
    <string name="text_view_event_sub_type">Event Sub Type</string>

    <string name="text_view_search_event_explanation">Fill the fields by which to filter</string>
    <string name="check_box_near_me">Near Me</string>
    <string name="text_view_at_date">At Date</string>

    <string-array name="recurrence_array">
        <item>One Time Event</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Workdays</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="event_types_array">
        <item>Other</item>
        <item>Sport</item>
        <item>Food</item>
        <item>Social</item>
    </string-array>

    <string-array name="sport_event_types_array">
        <item>Other</item>
        <item>Football</item>
        <item>Soccer</item>
        <item>Tennis</item>
        <item>Golf</item>
        <item>Swimming</item>
    </string-array>

    <string-array name="food_event_types_array">
        <item>Other</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="social_event_types_array">
        <item>Other</item>
        <item>Meeting</item>
        <item>Hangout</item>
        <item>Club</item>
    </string-array>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_friends">FriendsActivity</string>

</resources>
