<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guyard.meetme.AddNewEventActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/view">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/edit_text_event_name"
        android:id="@+id/edit_text_event_name"
        android:inputType="text"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/edit_text_event_descryption"
        android:id="@+id/edit_text_event_descryption"
        android:inputType="text"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/edit_text_location"
        android:id="@+id/edit_text_event_location"
        android:inputType="text"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_from_date"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/edit_text_from_date"
            android:focusable="false"
            style="@android:style/Widget.EditText"
            android:onClick="openDateDialog"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_text_from_time"
            android:focusable="false"
            style="@android:style/Widget.EditText"
            android:onClick="openTimeDialog"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_to_date"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusable="false"
            android:id="@+id/edit_text_to_date"
            style="@android:style/Widget.EditText"
            android:onClick="openDateDialog"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            style="@android:style/Widget.EditText"
            android:onClick="openTimeDialog"
            android:id="@+id/edit_text_to_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_view_recurrence"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/spinner_recurrence"
            android:id="@+id/spinner_recurrence"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_view_event_type"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/spinner_event_type"
            android:id="@+id/spinner_event_type"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_view_event_sub_type"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/spinner_event_sub_type"
            android:id="@+id/spinner_event_sub_type"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_participation_cap"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/edit_text_event_participation_cap"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_modify_event"
            android:onClick="button_on_click_confirm"
            android:text="@string/button_join_event"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_cancel_event"
            android:onClick="button_on_click_cancel"
            android:text="@string/button_cancel_event"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_remove_event"
            android:onClick="button_on_click_remove"
            android:text="@string/button_remove_event"/>

    </LinearLayout>

</LinearLayout>
